some size and alignment corrections sign up.css

--- a/sign up.css
+++ b/sign up.css
@@ -47,10 +47,10 @@ nav ul li a{
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     padding-bottom: 30px;
-    margin-left: 510px;
+    margin-left: 663px;
     background-color: #ffb6c15c;
     position: relative;
-    top: 35px;
+    top: 100px;
     left: -91px;
     
 }
@@ -73,6 +73,8 @@ input[type="password"] {
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    position:relative;
+    left:36px;
 }
 button {
     width: 100%;
@@ -82,6 +84,8 @@ button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    position:relative;
+    top:11px;
 }
 button:hover {
     background-color: #0056b3;
@@ -92,4 +96,6 @@ button:hover {
     background-color: black;
     height: 40px;
     margin-top: 212px;
+    position:relative;
+    top:23px;
 }
